# nfl-prop-agent_v2

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: prop_agent.yml
data/: sample_projections.csv
src/nfl_prop_agent/: __init__.py  cli.py  config.py  data_loader.py  data_models.py  edge_calculator.py  exceptions.py  logging_utils.py  pipeline.py  streamlit_app.py
src/nfl_prop_agent/data/: projections_sample.csv  props_sample.csv
src/pandas/: __init__.py
src/prop_model/: __init__.py  cli.py  config.py  engine.py  io.py  mapping.py  odds_api.py  report.py  schemas.py
src/pydantic/: __init__.py
src/rapidfuzz/: __init__.py
src/requests/: __init__.py
src/streamlit/: __init__.py
tests/: conftest.py  test_edge_calculator.py  test_prop_io.py  test_prop_schemas.py
