[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-prop-agent"
version = "0.1.0"
description = "NFL player prop edge analysis toolkit"
authors = [{ name = "AI Assistant" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "requests>=2.31",
    "pydantic>=1.10,<3",
    "rapidfuzz>=3.1",
    "python-dotenv>=1.0",
    "streamlit>=1.29"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = [
    "tests"
]
